-
Bug
-
Resolution: Fixed
-
P3
-
17, 21, 22, 23
-
b09
-
x86_64
-
linux_ubuntu
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8327195 | 22.0.1 | Tobias Hartmann | P3 | Resolved | Fixed | b07 |
| JDK-8321991 | 22 | Damon Fenacci | P3 | Closed | Won't Fix | |
| JDK-8334118 | 21.0.5-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8334308 | 21.0.5 | Martin Doerr | P3 | Resolved | Fixed | b01 |
# JRE version: OpenJDK Runtime Environment (17.0.9) (fastdebug build 17.0.9-internal+0-adhoc.jdk17u)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17.0.9-internal+0-adhoc.jdk17u, compiled mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
A DESCRIPTION OF THE PROBLEM :
I ran a testcase using JDK17.0.9, and I found the JVM crashed under the option -Xcomp -XX:-InlineUnsafeOps
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/data/jdk17u/src/hotspot/share/opto/output.cpp:803), pid=2064999, tid=2065012
# assert(local) failed: use _top instead of null
#
# JRE version: OpenJDK Runtime Environment (17.0.9) (fastdebug build 17.0.9-internal+0-adhoc.jdk17u)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17.0.9-internal+0-adhoc.jdk17u, compiled mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x28a206c] PhaseOutput::FillLocArray(int, MachSafePointNode*, Node*, GrowableArray<ScopeValue*>*, GrowableArray<ScopeValue*>*)+0x48c
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport -p%p -s%s -c%c -d%d -P%P -u%u -g%g -- %E" (or dumping to /data/bugs/TestIntrinsicBailOut_09_21_17_52_10/core.2064999)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
java -Xcomp -XX:-InlineUnsafeOps compiler.vectorapi.TestIntrinsicBailOut
ACTUAL -
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/output.cpp:803
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/data/jdk17u/src/hotspot/share/opto/output.cpp:803), pid=2064999, tid=2065012
# assert(local) failed: use _top instead of null
#
# JRE version: OpenJDK Runtime Environment (17.0.9) (fastdebug build 17.0.9-internal+0-adhoc.jdk17u)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17.0.9-internal+0-adhoc.jdk17u, compiled mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x28a206c] PhaseOutput::FillLocArray(int, MachSafePointNode*, Node*, GrowableArray<ScopeValue*>*, GrowableArray<ScopeValue*>*)+0x48c
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport -p%p -s%s -c%c -d%d -P%P -u%u -g%g -- %E" (or dumping to /data/bugs/TestIntrinsicBailOut_09_21_17_52_10/core.2064999)
#
# An error report file with more information is saved as:
# /data/bugs/TestIntrinsicBailOut_09_21_17_52_10/hs_err_pid2064999.log
#
# Compiler replay data is saved as:
# /data/bugs/TestIntrinsicBailOut_09_21_17_52_10/replay_pid2064999.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
---------- BEGIN SOURCE ----------
---------- END SOURCE ----------
- backported by
-
JDK-8327195 safepoint scalarization doesn't keep track of the depth of the JVM state
-
- Resolved
-
-
JDK-8334118 safepoint scalarization doesn't keep track of the depth of the JVM state
-
- Resolved
-
-
JDK-8334308 safepoint scalarization doesn't keep track of the depth of the JVM state
-
- Resolved
-
-
JDK-8321991 safepoint scalarization doesn't keep track of the depth of the JVM state
-
- Closed
-
- relates to
-
JDK-8324605 [lworld] Enable scalarization before inlining is finished
-
- Open
-
-
JDK-8325313 Header format error in TestIntrinsicBailOut after JDK-8317299
-
- Resolved
-
-
JDK-8276998 [REDO] Optimization of Box nodes in uncommon_trap
-
- Open
-
- links to
-
Commit
openjdk/jdk21u-dev/d2f857ac
-
Commit
openjdk/jdk22u/dd4dc386
-
Commit
openjdk/jdk/6d911f68
-
Review
openjdk/jdk21u-dev/716
-
Review
openjdk/jdk22u/74
-
Review
openjdk/jdk/17500