8317299: safepoint scalarization doesn't keep track of the depth of the JVM state

Reviewed-by: phh
Backport-of: 6d911f68a3244c40a62ab2570dfec68b8d0ed5d8